--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -1,14 +1,10 @@
 .component-display {
-    background-color: #858694;
-    color: white;
-    text-align: right;
-    font-weight: 200;
-    flex: 0 0 auto;
-    width: 100%;
+  background-color: #858694;
+  color: white;
+  text-align: right;
+  font-size: 20px;
+  font-weight: 200;
+  flex: 0 0 auto;
+  padding: 8px 4px;
+  width: 100%;
 }
-  
-.component-display > div {
-    font-size: 20px;
-    padding: 8px 4px 0 4px;
-}
-
