--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -4,7 +4,7 @@
     text-align: right;
     font-weight: 200;
     flex: 0 0 auto;
-    width: 100%;
+    height: 50px;
 }
   
 .component-display > div {
