--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .component-app {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  height: 100%;
+  max-width: 300px;
 }
