--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,6 +2,8 @@
     display: inline-flex;
     width: 25%;
     flex: 1 0 auto;
+    height: 50px;
+    border: none;
 }
 
 .component-button.wide {
