--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
 }
@@ -5,7 +11,7 @@ html {
 body {
   background-color: black;
   margin: 0;
-  padding: 0;
+  padding: 200px;
   font-family: sans-serif;
   height: 100%;
 }
