--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,20 @@
 html {
-  height: 100%;
+	height: 100%;
 }
 
 body {
-  background-color: black;
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  height: 100%;
+	background-color: black;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	height: 100%;
 }
 
 #root {
-  height: 100%;
+	height: 100%;
+}
+
+.component-app {
+	max-width: 300px;
+	margin: 0 auto;
 }
