wired up and ready to start writing tests

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,12 @@ body {
 
 #root {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.component-app {
+  width: 20%;
+  height: 100%;
 }
