--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -1,14 +1,14 @@
 .component-display {
-    background-color: #858694;
-    color: white;
-    text-align: right;
-    font-weight: 200;
-    flex: 0 0 auto;
-    width: 100%;
-}
-  
-.component-display > div {
-    font-size: 20px;
-    padding: 8px 4px 0 4px;
+  background-color: #858694;
+  color: white;
+  text-align: right;
+  font-weight: 200;
+  flex: 0 0 auto;
+  width: 100%;
+  height: 100px;
 }
 
+.component-display > div {
+  padding: 8px 4px 0 4px;
+  font-size: 50px;
+}
